[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Units/Unit.gd" type="Script" id=1]
[ext_resource path="res://src/Attributes.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/System/SelectionArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/System/PowerStorage.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 0.01

[node name="Unit" type="KinematicBody2D" groups=[
"Unit",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="Abilities" type="Node" parent="."]

[node name="Items" type="Node" parent="."]

[node name="Upgrades" type="Node" parent="."]

[node name="Technology" type="Node" parent="."]

[node name="StatusEffect" type="Node2D" parent="."]

[node name="UnitAttributes" parent="." instance=ExtResource( 2 )]

[node name="CurrentAttributes" parent="." instance=ExtResource( 2 )]

[node name="SelectionArea" parent="." instance=ExtResource( 3 )]

[node name="PowerStorage" parent="." instance=ExtResource( 4 )]
